feat: add footer

--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -22,6 +22,7 @@
   weight = 30
 
 # [[footer]]
-#   name = "Privacy Policy"
-#   url = "/privacy/"
+#   name = "Powered by"
+#   pre = ''
+#   # url = "/privacy/"
 #   weight = 10
