feat: update name

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
 # Hugo
-title = "Guide Nouveau"
+title = "Ars.Guide"
 description = "Your written guide for the technical side of Ars Nouveau"
 images = ["cover.png"]
 
