feat: add sourcelink technical information

--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -1,7 +1,7 @@
-# [[main]]
-#   name = "Docs"
-#   url = "/docs/guides/example-guide/"
-#   weight = 10
+[[main]]
+  name = "Docs"
+  url = "/docs/introduction/who-is-this-for/"
+  weight = 10
 
 [[main]]
   name = "KubeJS"
