feat: remove embed image

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -128,7 +128,7 @@ mainSections = ["docs", "kubejs"]
     logo = "favicon-512x512.png" # Logo of Organization — favicon-512x512.png (default)
     name = "Ars Nouveau" # Name of Organization or Person
     sameAs = [] # E.g. ["https://github.com/gethyas/hyas", "https://fosstodon.org/@hyas"]
-    images = ["cover.png"] # ["cover.png"] (default)
+    images = [] # ["cover.png"] (default)
     article = [] # Article sections
     newsArticle = [] # NewsArticle sections
     blogPosting = ["blog"] # BlogPosting sections
