feat: add glyph recipes

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -8,7 +8,7 @@
     "MD026": false,
     "MD033": false,
     "MD034": false,
-    "MD036": false
+    "MD036": false,
   },
-  "ignores": ["node_modules", "CHANGELOG.md", "README.md"]
+  "ignores": ["node_modules", "CHANGELOG.md", "README.md"],
 }
