--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hugo-installer": "^4.0.1"
   },
   "devDependencies": {
+    "prettier": "3.2.5",
     "shx": "^0.3.4"
   },
   "otherDependencies": {
