--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "paraglide-js compile --project ./project.inlang && astro check && astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "postinstall": "paraglide-js compile --project ./project.inlang"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
-    "@inlang/paraglide-js-adapter-astro": "^0.1.17",
     "@tabler/icons-react": "^3.1.0",
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
@@ -30,8 +28,6 @@
     "typescript": "^5.4.3"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^5.0.0",
-    "@inlang/paraglide-js": "1.3.4",
-    "@mojojoejo/vite-plugin-purgecss": "^1.1.0"
+    "@fullhuman/postcss-purgecss": "^5.0.0"
   }
 }
