--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "moduleResolution": "Bundler",
-    "allowJs": true,
-    "lib": ["ESNext.Array"]
+    "allowJs": true
   }
 }
