--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
+    "@expressive-code/plugin-line-numbers": "^0.33.5",
     "@tabler/icons-react": "^3.1.0",
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
