--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "purgecss": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^7.1.0",
     "sass": "^1.72.0",
     "typescript": "^5.4.3"
   },
