--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "sass": "^1.72.0",
     "typescript": "^5.4.3"
   },
