--- a/package.json
+++ b/package.json
@@ -11,16 +11,28 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/cloudflare": "^9.2.1",
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
+    "@astrojs/sitemap": "^3.1.2",
     "@expressive-code/plugin-line-numbers": "^0.33.5",
+    "@sentry/astro": "^7.108.0",
+    "@spotlightjs/astro": "^1.0.18",
     "@tabler/icons-react": "^3.1.0",
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
+    "@wbmnky/license-report-generator": "^2.3.1",
     "astro": "^4.5.9",
+    "astro-compress": "^2.2.19",
     "astro-expressive-code": "^0.33.5",
+    "astro-licenses-report": "^0.8.4",
+    "astro-lighthouse": "^0.1.3",
+    "astro-meta-tags": "^0.2.2",
+    "astro-og-canvas": "^0.4.2",
     "astro-pagefind": "^1.5.0",
     "astro-purgecss": "^4.1.0",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.3",
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "cssnano": "^6.1.1",
