--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "astro": "^4.5.9",
     "astro-compress": "^2.2.19",
     "astro-expressive-code": "^0.33.5",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "astro-licenses-report": "^0.8.4",
     "astro-lighthouse": "^0.1.3",
     "astro-meta-tags": "^0.2.2",
