--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "sass": "^1.72.0",
+    "tom-select": "^2.3.1",
     "typescript": "^5.4.3"
   },
   "devDependencies": {
