--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "4.20240502.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/core-js": "^2.5.8",
