--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
+    "dev": "wrangler types && astro dev",
+    "start": "wrangler types && astro dev",
+    "build": "wrangler types && astro check && astro build",
+    "preview": "wrangler types && astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
-    "@astrojs/cloudflare": "^9.2.1",
+    "@astrojs/cloudflare": "^10.2.5",
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
     "@astrojs/sitemap": "^3.1.2",
@@ -38,6 +38,7 @@
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "cssnano": "^6.1.1",
+    "discord.js": "^14.15.2",
     "purgecss": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,7 +46,8 @@
     "rehype-slug": "^6.0.0",
     "sass": "^1.72.0",
     "tom-select": "^2.3.1",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "wrangler": "3.39.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20240502.0",
