--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
     "@astrojs/sitemap": "^3.1.2",
+    "@discordjs/builders": "^1.8.1",
+    "@discordjs/core": "^1.2.0",
+    "@discordjs/rest": "^2.3.0",
     "@expressive-code/plugin-line-numbers": "^0.33.5",
     "@sentry/astro": "^7.108.0",
     "@spotlightjs/astro": "^1.0.18",
