--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
-    "@astrojs/cloudflare": "^9.2.1",
+    "@astrojs/cloudflare": "^10.2.6",
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
     "@astrojs/sitemap": "^3.1.2",
@@ -28,7 +28,7 @@
     "astro-compress": "^2.2.19",
     "astro-expressive-code": "^0.33.5",
     "astro-google-fonts-optimizer": "^0.2.2",
-    "astro-licenses-report": "^0.8.4",
+    "astro-licenses-report": "^0.0.0",
     "astro-lighthouse": "^0.1.3",
     "astro-meta-tags": "^0.2.2",
     "astro-og-canvas": "^0.4.2",
@@ -49,11 +49,11 @@
     "slugify": "^1.6.6",
     "tom-select": "^2.3.1",
     "typescript": "^5.4.3",
-    "wrangler": "3.39.0",
+    "wrangler": "3.57.1",
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "4.20240502.0",
+    "@cloudflare/workers-types": "^4.20240512.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/core-js": "^2.5.8",
