--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240512.0",
+    "@cloudflare/pages-plugin-sentry": "1.1.3",
+    "@cloudflare/workers-types": "4.20240512.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/core-js": "^2.5.8",
