--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "jsxImportSource": "react",
     "moduleResolution": "Bundler",
     "allowJs": true
-  }
+  },
+  "exclude": ["functions/**/*"]
 }
