--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "slugify": "^1.6.6",
     "tom-select": "^2.3.1",
     "typescript": "^5.4.3",
+    "unist-util-visit": "^5.0.0",
     "wrangler": "3.57.1",
     "zod-form-data": "^2.0.2"
   },
