--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typescript": "^5.4.3",
     "unist-util-visit": "^5.0.0",
     "wrangler": "3.57.1",
+    "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
