--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "astro-licenses-report": "^0.8.4",
     "astro-lighthouse": "^0.1.3",
     "astro-meta-tags": "^0.3.0",
-    "astro-og-canvas": "^0.5.0",
+    "astro-og-canvas": "^0.4.2",
     "astro-pagefind": "^1.5.0",
     "astro-purgecss": "^4.1.1",
     "astro-robots-txt": "^1.0.0",
@@ -49,19 +49,16 @@
     "tom-select": "^2.3.1",
     "typescript": "^5.4.5",
     "unist-util-visit": "^5.0.0",
-    "wrangler": "3.57.1",
     "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@cloudflare/pages-plugin-sentry": "1.1.3",
     "@cloudflare/workers-types": "4.20240512.0",
-    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/core-js": "^2.5.8",
     "@types/node": "20.12.12",
-    "core-js": "^3.37.1",
-    "dotenv": "16.4.5",
-    "tsx": "4.11.0"
+    "core-js": "^3.36.1"
   }
 }
