--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
     "@astrojs/sitemap": "^3.1.2",
+    "@cloudflare/pages-plugin-sentry": "^1.1.3",
+    "@discordjs/builders": "^1.8.1",
     "@expressive-code/plugin-line-numbers": "^0.33.5",
     "@sentry/astro": "^7.108.0",
     "@spotlightjs/astro": "^1.0.18",
@@ -44,9 +46,11 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "sass": "^1.72.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "4.20240512.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/core-js": "^2.5.8",
