--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,8 +1,9 @@
 {
-    "compilerOptions": {
-      "target": "esnext",
-      "module": "esnext",
-      "lib": ["esnext"],
-      "types": ["@cloudflare/workers-types"]
-    }
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["esnext"],
+    "types": ["@cloudflare/workers-types"]
+  }
 }
