fix: add webworker lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "moduleResolution": "Bundler",
-    "allowJs": true
+    "allowJs": true,
+    "lib": ["WebWorker"]
   }
 }
