--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "lib": ["esnext"],
+    "lib": ["esnext", "dom", "dom.iterable"],
     "types": ["@cloudflare/workers-types"]
   }
 }
