fix: update image import

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18.2.22",
     "@wbmnky/license-report-generator": "^2.3.1",
     "astro": "^4.5.9",
-    "astro-compress": "^2.2.19",
+    "astro-compressor": "^0.4.1",
     "astro-expressive-code": "^0.33.5",
     "astro-google-fonts-optimizer": "^0.2.2",
     "astro-licenses-report": "^0.8.4",
@@ -46,6 +46,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "sass": "^1.72.0",
+    "sharp": "^0.33.4",
     "tom-select": "^2.3.1",
     "typescript": "^5.4.3",
     "wrangler": "^3.57.1",
