--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@astrojs/mdx": "^2.2.1",
     "@astrojs/react": "^3.1.0",
     "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/svelte": "^5.4.0",
     "@cloudflare/pages-plugin-sentry": "^1.1.3",
     "@discordjs/builders": "^1.8.1",
     "@expressive-code/plugin-line-numbers": "^0.33.5",
     "@sentry/astro": "^7.108.0",
     "@spotlightjs/astro": "^1.0.18",
     "@tabler/icons-react": "^3.1.0",
+    "@types/animejs": "^3.1.12",
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.22",
     "@wbmnky/license-report-generator": "^2.3.1",
+    "animejs": "^3.2.2",
     "astro": "^4.5.9",
     "astro-compressor": "^0.4.1",
     "astro-expressive-code": "^0.33.5",
@@ -48,8 +51,9 @@
     "rehype-slug": "^6.0.0",
     "sass": "^1.72.0",
     "sharp": "^0.33.4",
+    "svelte": "^4.2.17",
     "tom-select": "^2.3.1",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "wrangler": "^3.57.1",
     "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
