--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bootstrap": "^5.3.3",
     "canvaskit-wasm": "^0.39.1",
     "cssnano": "^6.1.1",
+    "github-slugger": "^2.0.0",
     "he": "^1.2.0",
     "purgecss": "^5.0.0",
     "react": "^18.2.0",
