feat: generate caster tomes w/ github api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "moduleResolution": "Bundler",
-    "allowJs": true,
+    "allowJs": true
   }
 }
